Extracted array summation helper, ready for compound path deformation

--- a/packages/com.sonosthesia.deform/Runtime/Sonosthesia.Deform.asmdef
+++ b/packages/com.sonosthesia.deform/Runtime/Sonosthesia.Deform.asmdef
@@ -5,6 +5,7 @@
         "GUID:d8b63aba1907145bea998dd612889d6b",
         "GUID:2665a8d13d1b3f18800f46e256720795",
         "GUID:21d1eb854b91ade49bc69a263d12bee2",
+        "GUID:eda0e54ec5f2644fe9c828d88900f12b",
         "GUID:2794d9488a0044c8b932b9b661e6e989",
         "GUID:124ed27b5fec441139fc96ad76f1b7b4",
         "GUID:0e73a958ea93c4999aae301d99219c62",
