Working on touch deform affordance, fixed job schedule bug

--- a/packages/com.sonosthesia.touch/package.json
+++ b/packages/com.sonosthesia.touch/package.json
@@ -10,7 +10,9 @@
     "com.sonosthesia.utils": "1.10.0",
     "com.sonosthesia.flow": "1.10.0",
     "com.sonosthesia.trigger": "1.10.0",
-    "com.sonosthesia.interaction": "1.10.0"
+    "com.sonosthesia.interaction": "1.10.0",
+    "com.sonosthesia.dynamic": "1.10.0",
+    "com.sonosthesia.envelope": "1.10.0"
   },
   "description": "Sonosthesia unity touch",
   "displayName": "Sonosthesia Touch",
