--- a/packages/com.sonosthesia.touchdeform/Runtime/Sonosthesia.TouchDeform.asmdef
+++ b/packages/com.sonosthesia.touchdeform/Runtime/Sonosthesia.TouchDeform.asmdef
@@ -2,11 +2,16 @@
     "name": "Sonosthesia.TouchDeform",
     "rootNamespace": "Sonosthesia.TouchDeform",
     "references": [
+        "GUID:d8b63aba1907145bea998dd612889d6b",
         "GUID:560b04d1a97f54a4e82edc0cbbb69285",
         "GUID:25e5e4b6f3916462c92ecc1d0ffca2c2",
         "GUID:5498766dc821c4d57a7ccc41bc91fe53",
         "GUID:84e4dabf4521845c2ba0da98542e684a",
-        "GUID:1fd512b3b6c091f43bedec2c48831e94"
+        "GUID:1fd512b3b6c091f43bedec2c48831e94",
+        "GUID:c457092a10a0ce546b4a27eeadca91c6",
+        "GUID:eda0e54ec5f2644fe9c828d88900f12b",
+        "GUID:00053512b7993443db285a1ae1060dfd",
+        "GUID:124ed27b5fec441139fc96ad76f1b7b4"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
