--- a/packages/com.sonosthesia.touchdeform/package.json
+++ b/packages/com.sonosthesia.touchdeform/package.json
@@ -1,10 +1,15 @@
 {
   "author": "Jonathan Thorpe",
   "dependencies": {
+    "com.unity.mathematics": "1.2.6",
     "com.neuecc.unirx": "7.1.0",
     "com.sonosthesia.utils": "1.10.0",
     "com.sonosthesia.touch": "1.10.0",
-    "com.sonosthesia.deform": "1.10.0"
+    "com.sonosthesia.deform": "1.10.0",
+    "com.sonosthesia.ease": "1.10.0",
+    "com.sonosthesia.trigger": "1.10.0",
+    "com.sonosthesia.envelope": "1.10.0",
+    "com.sonosthesia.mesh": "1.10.0"
   },
   "description": "Sonosthesia unity touchdeform",
   "displayName": "Sonosthesia TouchDeform",
@@ -15,5 +20,5 @@
   "name": "com.sonosthesia.touchdeform",
   "repository": "github:jbat100/sonosthesia-unity-packages",
   "unity": "2022.3",
-  "version": "1.9.0"
+  "version": "1.10.0"
 }
