--- a/packages/com.sonosthesia.touch/Runtime/Sonosthesia.Touch.asmdef
+++ b/packages/com.sonosthesia.touch/Runtime/Sonosthesia.Touch.asmdef
@@ -13,7 +13,8 @@
         "GUID:00053512b7993443db285a1ae1060dfd",
         "GUID:1fd512b3b6c091f43bedec2c48831e94",
         "GUID:2c48158b2e03846379768d3cfe369611",
-        "GUID:c457092a10a0ce546b4a27eeadca91c6"
+        "GUID:c457092a10a0ce546b4a27eeadca91c6",
+        "GUID:eda0e54ec5f2644fe9c828d88900f12b"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
