--- a/packages/com.sonosthesia.envelope/package.json
+++ b/packages/com.sonosthesia.envelope/package.json
@@ -1,6 +1,7 @@
 {
   "author": "Jonathan Thorpe",
   "dependencies": {
+    "com.unity.mathematics": "1.2.6",
     "com.neuecc.unirx": "7.1.0",
     "com.sonosthesia.utils": "1.10.0",
     "com.sonosthesia.ease": "1.10.0"
