Started on mesh touch deform

--- a/packages/com.sonosthesia.touchdeform/Runtime/Sonosthesia.TouchDeform.asmdef
+++ b/packages/com.sonosthesia.touchdeform/Runtime/Sonosthesia.TouchDeform.asmdef
@@ -11,7 +11,8 @@
         "GUID:c457092a10a0ce546b4a27eeadca91c6",
         "GUID:eda0e54ec5f2644fe9c828d88900f12b",
         "GUID:00053512b7993443db285a1ae1060dfd",
-        "GUID:124ed27b5fec441139fc96ad76f1b7b4"
+        "GUID:124ed27b5fec441139fc96ad76f1b7b4",
+        "GUID:2794d9488a0044c8b932b9b661e6e989"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
